# multi-tenant-rag-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ui  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  deploy-aws.yaml  deploy-gcp.yaml
alembic/: env.py
alembic/versions/: 001_initial.py  002_update_embedding_dim.py
app/: config.py  dependencies.py  main.py
app/admin/: router.py  schemas.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/cache/: redis.py
app/common/: database.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  storage.py
app/documents/: models.py  router.py  schemas.py  service.py
app/ingestion/: chunker.py  embedder.py  extractor.py  tasks.py
app/llm/: providers.py
app/query/: router.py  schemas.py  service.py
infra/aws/secrets/: external-secrets.yaml
infra/aws/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
infra/gcp/secrets/: external-secrets.yaml
k8s/base/: kustomization.yaml  namespace.yaml
rag-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
rag-service/alembic/: env.py
rag-service/app/: config.py  dependencies.py  main.py
rag-service/tests/: conftest.py  test_auth.py  test_documents.py
scripts/: seed_data.py  setup.sh
tests/: conftest.py  test_auth.py  test_documents.py  test_ingestion.py  test_phase4.py  test_query.py
ui/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui/src/: middleware.ts
(+105 files in other folders)
